Bug 437361.  Propagate exceptions from showModalDialog's guts to script as needed instead of dropping them on the floor.  r+sr=bzbarsky